fix: images on small screens, fix brand on small screens

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -96,8 +96,7 @@ nav {
     flex: 0.5 1 auto;
     text-align: center;
     margin: auto;
-    text-wrap: nowrap;
-    overflow-x:auto;
+    text-wrap: initial;
 }
 
 nav > ul {
@@ -198,7 +197,7 @@ footer {
 
 @media screen and (max-width: 700px) {
     .navbar-brand {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         flex: 2 1 auto;
     }
 
